--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=build/index.html" />
+    <meta
+      http-equiv="refresh"
+      content="0; url=https://markuptitan.github.io/react-counter/build/index.html"
+    />
   </head>
   <body>
-    <p>If you are not redirected, <a href="build/index.html">click here</a>.</p>
+    <p>
+      If you are not redirected,
+      <a href="https://markuptitan.github.io/react-counter/build/index.html"
+        >click here</a
+      >.
+    </p>
   </body>
 </html>
