chore: add meta tags for mobile web app capabilities and author information

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2a2d3e" />
     <meta name="description" content="Basic counter created using React" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="author" content="Siyabonga Samson Lukhele" />
+    <link rel="canonical" href="https://siyabuilds.tech/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Simple Counter App</title>
